# internal/controller/auth.go
@@ -1,29 +1,65 @@
 package controller
 
 import (
+	"context"
+	"errors"
 	"net/http"
 
+	"github.com/go-playground/validator/v10"
+	"github.com/itmosha/auth-service/internal/entity"
+	"github.com/itmosha/auth-service/internal/usecase"
 	"github.com/itmosha/auth-service/pkg/logger"
 )
 
-type UsecaseInterface interface{}
+type UsecaseInterface interface {
+	Register(ctx *context.Context, body *entity.RegisterBody) (authData *entity.AuthData, err error)
+}
 
 type Controller struct {
-	usecase UsecaseInterface
-	logger  *logger.Logger
+	uc        UsecaseInterface
+	validator *validator.Validate
 }
 
 func NewController(uc UsecaseInterface, logger *logger.Logger) *Controller {
-	return &Controller{uc, logger}
+	return &Controller{uc, validator.New()}
 }
 
 // @Title Register new user.
-// @Failure 501 {object} ErrorResponseBody
+// @Descriptiomn Register a new user using a phonenumber.
+// @Param body body entity.RegisterBody true "Registration body"
+// @Success 201 object entity.AuthData "Successful registration"
+// @Failure 400 object ErrorResponseBody "Invalid request body"
+// @Failure 409 object ErrorResponseBody "User already registered"
+// @Failure 422 object ErrorResponseBody "User registration not finished"
+// @Failure 500 object ErrorResponseBody "Internal server error"
 // @Resource Auth
 // @Route /api/register/ [post]
 func (c *Controller) Register() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		ResponseWithError(w, r, http.StatusNotImplemented, ErrServerError)
+		ctx := context.Background()
+		body, err := readBodyToStruct(r, &entity.RegisterBody{})
+		if err != nil {
+			ResponseWithError(w, r, http.StatusBadRequest, err)
+			return
+		}
+		err = c.validator.StructCtx(ctx, body)
+		if err != nil {
+			errors := err.(validator.ValidationErrors)
+			ResponseWithError(w, r, http.StatusBadRequest, errors)
+			return
+		}
+		authData, err := c.uc.Register(&ctx, body)
+		if err != nil {
+			if errors.Is(err, usecase.ErrAlreadyRegistered) {
+				ResponseWithError(w, r, http.StatusConflict, err)
+			} else if errors.Is(err, usecase.ErrRegistrationNotFinished) {
+				ResponseWithError(w, r, http.StatusUnprocessableEntity, err)
+			} else {
+				ResponseWithError(w, r, http.StatusInternalServerError, err)
+			}
+			return
+		}
+		ResponseWithSuccess(w, r, http.StatusCreated, authData)
 	}
 }
 
@@ -33,7 +69,7 @@ func (c *Controller) Register() http.HandlerFunc {
 // @Route /api/register/confirm/ [post]
 func (c *Controller) ConfirmRegister() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		ResponseWithError(w, r, http.StatusNotImplemented, ErrServerError)
+		ResponseWithError(w, r, http.StatusNotImplemented, nil)
 	}
 }
 
@@ -43,7 +79,7 @@ func (c *Controller) ConfirmRegister() http.HandlerFunc {
 // @Route /api/login/ [post]
 func (c *Controller) Login() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		ResponseWithError(w, r, http.StatusNotImplemented, ErrServerError)
+		ResponseWithError(w, r, http.StatusNotImplemented, nil)
 	}
 }
 
@@ -53,7 +89,7 @@ func (c *Controller) Login() http.HandlerFunc {
 // @Route /api/login/confirm/ [post]
 func (c *Controller) ConfirmLogin() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		ResponseWithError(w, r, http.StatusNotImplemented, ErrServerError)
+		ResponseWithError(w, r, http.StatusNotImplemented, nil)
 	}
 }
 
@@ -63,7 +99,7 @@ func (c *Controller) ConfirmLogin() http.HandlerFunc {
 // @Route /api/refresh/ [post]
 func (c *Controller) Refresh() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		ResponseWithError(w, r, http.StatusNotImplemented, ErrServerError)
+		ResponseWithError(w, r, http.StatusNotImplemented, nil)
 	}
 }
 
@@ -73,6 +109,6 @@ func (c *Controller) Refresh() http.HandlerFunc {
 // @Route /api/revoke/ [post]
 func (c *Controller) Revoke() http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
-		ResponseWithError(w, r, http.StatusNotImplemented, ErrServerError)
+		ResponseWithError(w, r, http.StatusNotImplemented, nil)
 	}
 }
